--- a/fridakahlo/frida_project.ipynb
+++ b/fridakahlo/frida_project.ipynb
@@ -28,7 +28,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "paintings = [The Two Fridas, My Dress Hangs Here, Tree of Hope, Self Portrait With Monkeys]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
